[ #2452 ] More highlighting for and better typesetting of pragmas.

--- a/src/data/agda.sty
+++ b/src/data/agda.sty
@@ -147,7 +147,7 @@
 
     % Aspect colours.
     \definecolor{AgdaComment}      {HTML}{000000}
-    \definecolor{AgdaOption}       {HTML}{000000}
+    \definecolor{AgdaPragma}       {HTML}{000000}
     \definecolor{AgdaKeyword}      {HTML}{000000}
     \definecolor{AgdaString}       {HTML}{000000}
     \definecolor{AgdaNumber}       {HTML}{000000}
@@ -184,7 +184,7 @@
 
     % Aspect colours.
     \definecolor{AgdaComment}      {HTML}{B22222}
-    \definecolor{AgdaOption}       {HTML}{000000}
+    \definecolor{AgdaPragma}       {HTML}{000000}
     \definecolor{AgdaKeyword}      {HTML}{000000}
     \definecolor{AgdaString}       {HTML}{000000}
     \definecolor{AgdaNumber}       {HTML}{000000}
@@ -220,7 +220,7 @@
 }{
     % Aspect colours.
     \definecolor{AgdaComment}      {HTML}{B22222}
-    \definecolor{AgdaOption}       {HTML}{000000}
+    \definecolor{AgdaPragma}       {HTML}{000000}
     \definecolor{AgdaKeyword}      {HTML}{CD6600}
     \definecolor{AgdaString}       {HTML}{B22222}
     \definecolor{AgdaNumber}       {HTML}{A020F0}
@@ -261,8 +261,8 @@
 % Aspect commands.
 \newcommand{\AgdaComment}     [1]
     {\AgdaNoSpaceMath{\AgdaCommentFontStyle{\textcolor{AgdaComment}{#1}}}}
-\newcommand{\AgdaOption}      [1]
-    {\AgdaNoSpaceMath{\AgdaCommentFontStyle{\textcolor{AgdaOption}{#1}}}}
+\newcommand{\AgdaPragma}      [1]
+    {\AgdaNoSpaceMath{\AgdaCommentFontStyle{\textcolor{AgdaPragma}{#1}}}}
 \newcommand{\AgdaKeyword}     [1]
     {\AgdaNoSpaceMath{\AgdaKeywordFontStyle{\textcolor{AgdaKeyword}{#1}}}}
 \newcommand{\AgdaString}      [1]
