--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -113,7 +113,9 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
-\AgdaKeyword{BUILTIN} NATURAL \AgdaDatatype{ℕ}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN}\AgdaSpace{}%
+\AgdaPragma{NATURAL}\AgdaSpace{}%
+\AgdaDatatype{ℕ}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \\
 %
@@ -259,10 +261,10 @@
 %
 \>[4]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{r}%
-\>[110I]\AgdaSymbol{=}\AgdaSpace{}%
+\>[112I]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}\<%
 \\
-\>[.][@{}l@{}]\<[110I]%
+\>[.][@{}l@{}]\<[112I]%
 \>[8]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{f}%
 \>[13]\AgdaSymbol{=}\AgdaSpace{}%
