--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.quick.tex
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.quick.tex
@@ -6,7 +6,9 @@
 
 \begin{code}%
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
-\AgdaKeyword{BUILTIN} SIZE \AgdaPostulate{Size}\AgdaSpace{}%
+\AgdaKeyword{BUILTIN}\AgdaSpace{}%
+\AgdaPragma{SIZE}\AgdaSpace{}%
+\AgdaPostulate{Size}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \\
 %
