--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters-with-pragma.tex
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters-with-pragma.tex
@@ -7,7 +7,7 @@
 %
 \>[2]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}\AgdaSpace{}%
-\AgdaOption{{-}{-}count{-}clusters}\AgdaSpace{}%
+\AgdaPragma{{-}{-}count{-}clusters}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \end{code}
 
