--- a/test/LaTeXAndHTML/succeed/Issue2474.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2474.tex
@@ -5,7 +5,7 @@
 \begin{code}%
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}\AgdaSpace{}%
-\AgdaOption{{-}{-}allow{-}unsolved{-}metas}\AgdaSpace{}%
+\AgdaPragma{{-}{-}allow{-}unsolved{-}metas}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \\
 %
