--- a/test/LaTeXAndHTML/succeed/Options.tex
+++ b/test/LaTeXAndHTML/succeed/Options.tex
@@ -7,10 +7,70 @@
 \begin{code}%
 \>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}%
-\>[13]\AgdaOption{{-}{-}no{-}positivity{-}check}\<%
+\>[1I]\AgdaPragma{{-}{-}no{-}positivity{-}check}\<%
+\\
+\>[.][@{}l@{}]\<[1I]%
+\>[12]\AgdaPragma{{-}{-}no{-}termination{-}check}\<%
 \\
 %
-\>[13]\AgdaOption{{-}{-}no{-}termination{-}check}\AgdaSpace{}%
+\>[12]\AgdaPragma{{-}v}\AgdaSpace{}%
+\AgdaPragma{0}\AgdaSpace{}%
+\AgdaSymbol{\#{-}\}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{FOREIGN}\AgdaSpace{}%
+\AgdaPragma{GHC}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPragma{f}\AgdaSpace{}%
+\AgdaPragma{::}\AgdaSpace{}%
+\AgdaPragma{Maybe}\AgdaSpace{}%
+\AgdaPragma{Bool}\AgdaSpace{}%
+\AgdaPragma{{-}\ensuremath{>}}\AgdaSpace{}%
+\AgdaPragma{Bool}\<%
+\\
+%
+\>[2]\AgdaPragma{f}\AgdaSpace{}%
+\AgdaPragma{Nothing}%
+\>[19]\AgdaPragma{=}\AgdaSpace{}%
+\AgdaPragma{False}\<%
+\\
+%
+\>[2]\AgdaPragma{f}\AgdaSpace{}%
+\AgdaPragma{(Just}%
+\>[11]\AgdaPragma{True)}%
+\>[19]\AgdaPragma{=}\AgdaSpace{}%
+\AgdaPragma{True}\<%
+\\
+%
+\>[2]\AgdaPragma{f}\AgdaSpace{}%
+\AgdaPragma{(Just}%
+\>[11]\AgdaPragma{False)}%
+\>[19]\AgdaPragma{=}\AgdaSpace{}%
+\AgdaPragma{False}\<%
+\\
+%
+\>[2]\AgdaSymbol{\#{-}\}}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaKeyword{postulate}\<%
+\\
+\>[0][@{}l@{\AgdaIndent{0}}]%
+\>[2]\AgdaPostulate{A}\AgdaSpace{}%
+\AgdaPostulate{B}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaPrimitiveType{Set}\<%
+\\
+%
+\\[\AgdaEmptyExtraSkip]%
+\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\AgdaKeyword{DISPLAY}\AgdaSpace{}%
+\AgdaPostulate{A}\AgdaSpace{}%
+\AgdaPragma{=}\AgdaSpace{}%
+\AgdaPostulate{B}\AgdaSpace{}%
 \AgdaSymbol{\#{-}\}}\<%
 \end{code}
 
