--- a/test/LaTeXAndHTML/succeed/Issue2019.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2019.quick.tex
@@ -4,9 +4,9 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaComment{{-}{-} We use non{-}standard spaces between the name of the term and the}\<%
+\>[0]\AgdaComment{-- We use non-standard spaces between the name of the term and the}\<%
 \\
-\>[0]\AgdaComment{{-}{-} colon.}\<%
+\>[0]\AgdaComment{-- colon.}\<%
 \\
 \>[0]\AgdaKeyword{postulate}\<%
 \\
@@ -14,19 +14,19 @@
 \>[2]\AgdaPostulate{s00A0}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}%
-\>[15]\AgdaComment{{-}{-} NO{-}BREAK SPACE        ("\textbackslash{} " with Agda input method)}\<%
+\>[15]\AgdaComment{-- NO-BREAK SPACE        ("\textbackslash{} " with Agda input method)}\<%
 \\
 %
 \>[2]\AgdaPostulate{s2004}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}%
-\>[15]\AgdaComment{{-}{-} THREE{-}PER{-}EM SPACE    ("\textbackslash{};" with Agda input method)}\<%
+\>[15]\AgdaComment{-- THREE-PER-EM SPACE    ("\textbackslash{};" with Agda input method)}\<%
 \\
 %
 \>[2]\AgdaPostulate{s202F}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}%
-\>[15]\AgdaComment{{-}{-} NARROW NO{-}BREAK SPACE ("\textbackslash{}," with Agda input method)}\<%
+\>[15]\AgdaComment{-- NARROW NO-BREAK SPACE ("\textbackslash{}," with Agda input method)}\<%
 \end{code}
 
 % Various whitespace characters: "    ".
@@ -37,15 +37,15 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{{-}{-} Various whitespace characters: "    ".}\<%
+\>[0]\AgdaComment{-- Various whitespace characters: "    ".}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{various{-}whitespace{-}characters}\AgdaSpace{}%
+\>[0]\AgdaFunction{various-whitespace-characters}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPostulate{String}\<%
 \\
-\>[0]\AgdaFunction{various{-}whitespace{-}characters}\AgdaSpace{}%
+\>[0]\AgdaFunction{various-whitespace-characters}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaString{"    "}\<%
 \end{code}
