--- a/test/LaTeXAndHTML/succeed/Issue2474.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2474.quick.tex
@@ -3,10 +3,10 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}\AgdaSpace{}%
-\AgdaPragma{{-}{-}allow{-}unsolved{-}metas}\AgdaSpace{}%
-\AgdaSymbol{\#{-}\}}\<%
+\AgdaPragma{--allow-unsolved-metas}\AgdaSpace{}%
+\AgdaSymbol{\#-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
