--- a/test/LaTeXAndHTML/succeed/Issue2733-2.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2733-2.quick.tex
@@ -7,7 +7,7 @@
 \begin{AgdaAlign}
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{Issue2733{-}2}\AgdaSpace{}%
+\AgdaModule{Issue2733-2}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 
