--- a/test/LaTeXAndHTML/succeed/Options.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Options.quick.tex
@@ -5,21 +5,21 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{OPTIONS}%
-\>[1I]\AgdaPragma{{-}{-}no{-}positivity{-}check}\<%
+\>[1I]\AgdaPragma{--no-positivity-check}\<%
 \\
 \>[.][@{}l@{}]\<[1I]%
-\>[12]\AgdaPragma{{-}{-}no{-}termination{-}check}\<%
+\>[12]\AgdaPragma{--no-termination-check}\<%
 \\
 %
-\>[12]\AgdaPragma{{-}v}\AgdaSpace{}%
+\>[12]\AgdaPragma{-v}\AgdaSpace{}%
 \AgdaPragma{0}\AgdaSpace{}%
-\AgdaSymbol{\#{-}\}}\<%
+\AgdaSymbol{\#-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{FOREIGN}\AgdaSpace{}%
 \AgdaPragma{GHC}\<%
 \\
@@ -28,7 +28,7 @@
 \AgdaPragma{::}\AgdaSpace{}%
 \AgdaPragma{Maybe}\AgdaSpace{}%
 \AgdaPragma{Bool}\AgdaSpace{}%
-\AgdaPragma{{-}\ensuremath{>}}\AgdaSpace{}%
+\AgdaPragma{->}\AgdaSpace{}%
 \AgdaPragma{Bool}\<%
 \\
 %
@@ -52,7 +52,7 @@
 \AgdaPragma{False}\<%
 \\
 %
-\>[2]\AgdaSymbol{\#{-}\}}\<%
+\>[2]\AgdaSymbol{\#-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -66,12 +66,12 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{DISPLAY}\AgdaSpace{}%
 \AgdaPostulate{A}\AgdaSpace{}%
 \AgdaPragma{=}\AgdaSpace{}%
 \AgdaPostulate{B}\AgdaSpace{}%
-\AgdaSymbol{\#{-}\}}\<%
+\AgdaSymbol{\#-\}}\<%
 \end{code}
 
 \end{document}
