--- a/test/LaTeXAndHTML/succeed/QuickLaTeX.quick.tex
+++ b/test/LaTeXAndHTML/succeed/QuickLaTeX.quick.tex
@@ -5,11 +5,11 @@
 \begin{document}
 
 \begin{code}%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{BUILTIN}\AgdaSpace{}%
 \AgdaPragma{SIZE}\AgdaSpace{}%
 \AgdaPostulate{Size}\AgdaSpace{}%
-\AgdaSymbol{\#{-}\}}\<%
+\AgdaSymbol{\#-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
