--- a/test/LaTeXAndHTML/succeed/Issue2401.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2401.tex
@@ -41,7 +41,7 @@ av
 %
 \>[6]\AgdaInductiveConstructor{aa}%
 \>[12]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaComment{\{{-} \textbackslash{}end\{code\} {-}\}}\AgdaSpace{}%
+\AgdaComment{\{- \textbackslash{}end\{code\} -\}}\AgdaSpace{}%
 \AgdaDatatype{Bool}\<%
 \\
 \>[0]\<%
