--- a/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
+++ b/test/LaTeXAndHTML/succeed/Issue2744.quick.tex
@@ -106,7 +106,7 @@ After.
 \end{code}
 \begin{code}%
 \>[2][@{}l@{\AgdaIndent{1}}]%
-\>[4]\AgdaOperator{\AgdaPostulate{\ensuremath{<}!\AgdaUnderscore{}!\ensuremath{>}}}%
+\>[4]\AgdaOperator{\AgdaPostulate{<!\AgdaUnderscore{}!>}}%
 \>[11]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
