--- a/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
+++ b/test/LaTeXAndHTML/succeed/LaTeX-succeed.quick.tex
@@ -7,7 +7,7 @@
 \AgdaHide{
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{LaTeX{-}succeed}\AgdaSpace{}%
+\AgdaModule{LaTeX-succeed}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
 \end{code}
 }
@@ -101,7 +101,7 @@
 \\
 \>[0]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{m}\AgdaSpace{}%
-\AgdaComment{\{{-} ugh {-}\}}%
+\AgdaComment{\{- ugh -\}}%
 \>[17]\AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{n}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -112,11 +112,11 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaSymbol{\{{-}\#}\AgdaSpace{}%
+\>[0]\AgdaSymbol{\{-\#}\AgdaSpace{}%
 \AgdaKeyword{BUILTIN}\AgdaSpace{}%
 \AgdaPragma{NATURAL}\AgdaSpace{}%
 \AgdaDatatype{ℕ}\AgdaSpace{}%
-\AgdaSymbol{\#{-}\}}\<%
+\AgdaSymbol{\#-\}}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
