--- a/test/LaTeXAndHTML/succeed/ltgt.tex
+++ b/test/LaTeXAndHTML/succeed/ltgt.tex
@@ -10,12 +10,12 @@
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaFunction{\ensuremath{<}\ensuremath{>}}\AgdaSpace{}%
+\>[0]\AgdaFunction{<>}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\<%
 \\
-\>[0]\AgdaFunction{\ensuremath{<}\ensuremath{>}}\AgdaSpace{}%
+\>[0]\AgdaFunction{<>}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\<%
 \\
