[ LaTeX backend ] Changed the default value of \AgdaEmptySkip.

--- a/src/data/agda.sty
+++ b/src/data/agda.sty
@@ -510,9 +510,9 @@
   \Agda@AlignEnd{}%
   \ignorespacesafterend}
 
-% Vertical space used for empty lines. By default \baselineskip.
+% Vertical space used for empty lines. By default \abovedisplayskip.
 \newlength{\AgdaEmptySkip}
-\setlength{\AgdaEmptySkip}{\baselineskip}
+\setlength{\AgdaEmptySkip}{\abovedisplayskip}
 
 % Extra space to be inserted for empty lines (the difference between
 % \AgdaEmptySkip and \baselineskip). Used internally.
